syntax = "proto3";

option java_multiple_files = true;

package net.sopod.soim.logic.common.message;

message UserSearchReq {
  string keyword = 1;
}

message UserSearchReply {
  repeated UserInfo users = 1;
}

message UserInfo {
  int64 uid = 1;
  string account = 2;
  string nickname = 3;
}
