syntax = "proto3";

option java_multiple_files = true;

package net.sopod.soim.logic.api.friend.search;


service UserSearchService {

  // 关键字搜索用户
  rpc searchUser(UserSearchReq) returns (UserSearchReply) {}

}
